// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-extra-details-chip-stub
      color="#6d4c41"
      icon="center_focus_weak"
    />
  </span>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` with full parents 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout column"
    >
      <div>
        Rules :
      </div>
      <div
        class="rule-name"
      >
           parent-rule-1-name
      </div>
      <div
        class="rule-name"
      >
           parent-rule-2-name
      </div>
      <div
        class="rule-name"
      >
           parent-rule-3-name
      </div>
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <!---->
    <c-alarm-extra-details-chip-stub
      color="#6d4c41"
      icon="center_focus_weak"
    />
  </span>
</div>
`;

exports[`extra-details-parents Renders \`extra-details-parents\` without rules 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="left: 0px; max-width: auto; top: 12px; z-index: 8;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout column"
    >
      <div>
        Rules :
      </div>
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;
